Fix the icons spacing on the top-menu module and set the collapsing nav breakpoint to 1200px (medium-nav-break.scss is no longer needed).

--- a/assets/css/lsx-rtl.css
+++ b/assets/css/lsx-rtl.css
@@ -68,8 +68,8 @@ body { direction: rtl; }
 
 #top-menu .menu-item > a:before { display: inline-block; font: normal normal normal 14px/1 FontAwesome; font-size: inherit; text-rendering: auto; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 15px; padding-left: 5px; transition: color 300ms ease; }
 
-@media (max-width: 767px) { #top-menu .menu-item:not(.cta) > a { font: 0/0 a; color: transparent; text-shadow: none; background-color: transparent; border: 0; padding: 0 10px; }
-  #top-menu .menu-item:not(.cta) > a:before { font-size: 18px; padding-left: 0; } }
+@media (max-width: 767px) { #top-menu .menu-item:not(.cta) > a { font: 0/0 a; color: transparent; text-shadow: none; background-color: transparent; border: 0; padding: 0; }
+  #top-menu .menu-item:not(.cta) > a:before { font-size: 18px; padding: 0 5px; } }
 
 #top-menu .menu-item.map > a:before { content: ""; }
 
